@@ -30,14 +30,14 @@
   <p>The Templeton specific configuration is split into two layers:</p>
 
   <ol>
-   <li><strong>templeton-default.xml</strong> - All the configuration variables
+   <li><strong>webhcat-default.xml</strong> - All the configuration variables
     that Templeton needs. This file sets the defaults that ship with Templeton and
     should only be changed by Templeton developers. Do not copy this file and/or
-    change it to maintain local installation settings. Because templeton-default.xml
+    change it to maintain local installation settings. Because webhcat-default.xml
     is present in the Templeton war file, editing a local copy of it will not change the
     configuration.</li>
 
-   <li><strong>templeton-site.xml</strong> - The (possibly empty) configuration
+   <li><strong>webhcat-site.xml</strong> - The (possibly empty) configuration
     file in which the system administrator can set variables for their Hadoop cluster.
     Create this file and maintain entries in it for configuration variables
     that require you to override default values based on your local installation.</li>
@@ -66,7 +66,7 @@ ${env.PIG_HOME}/bin/pig
      uncertainty.</p>
 
   <p><strong>Note:</strong> The location of the log files created by Templeton and some other properties
-     of the logging system are set in the templeton-log4j.properties file.</p>
+     of the logging system are set in the webhcat-log4j.properties file.</p>
 
   <section>
   <title>Variables</title>
@@ -87,13 +87,13 @@ ${env.PIG_HOME}/bin/pig
 
   <tr>
     <td><strong>templeton.jar</strong></td>
-    <td><code>${env.TEMPLETON_HOME}/templeton/templeton-0.1.0-dev.jar</code></td>
+    <td><code>${env.TEMPLETON_HOME}/share/webhcat/svr/webhcat-0.5.0-SNAPSHOT.jar</code></td>
     <td>The path to the Templeton jar file.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.libjars</strong></td>
-    <td><code>${env.TEMPLETON_HOME}/lib/zookeeper-3.3.4.jar</code></td>
+    <td><code>${env.TEMPLETON_HOME}/share/webhcat/svr/lib/zookeeper-3.4.3.jar</code></td>
     <td>Jars to add to the classpath.</td>
   </tr>
 
@@ -106,7 +106,7 @@ ${env.PIG_HOME}/bin/pig
 
   <tr>
     <td><strong>templeton.override.enabled</strong></td>
-    <td><code>true</code></td>
+    <td><code>false</code></td>
     <td>Enable the override path in templeton.override.jars</td>
   </tr>
 
@@ -124,13 +124,13 @@ ${env.PIG_HOME}/bin/pig
 
   <tr>
     <td><strong>templeton.pig.archive</strong></td>
-    <td><code>hdfs:///user/templeton/pig-0.9.2.tar.gz</code></td>
+    <td><code>hdfs:///user/templeton/pig-0.10.1.tar.gz</code></td>
     <td>The path to the Pig archive.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.pig.path</strong></td>
-    <td><code>pig-0.9.2.tar.gz/pig-0.9.2/bin/pig</code></td>
+    <td><code>pig-0.10.1.tar.gz/pig-0.10.1/bin/pig</code></td>
     <td>The path to the Pig executable.</td>
   </tr>
 
@@ -142,13 +142,13 @@ ${env.PIG_HOME}/bin/pig
 
  <tr>
     <td><strong>templeton.hive.archive</strong></td>
-    <td><code>hdfs:///user/templeton/hcatalog-0.5.0.tar.gz</code></td>
+    <td><code>hdfs:///user/templeton/hive-0.10.0.tar.gz</code></td>
     <td>The path to the Hive archive.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.hive.path</strong></td>
-    <td><code>hcatalog-0.5.0.tar.gz/hcatalog-0.5.0/bin/hive</code></td>
+    <td><code>hive-0.10.0.tar.gz/hive-0.10.0/bin/hive</code></td>
     <td>The path to the Hive executable.</td>
   </tr>
 
@@ -192,7 +192,7 @@ Using localhost in metastore uri does not work with kerberos security.
 
   <tr>
     <td><strong>templeton.exec.envs</strong></td>
-    <td><code>HADOOP_PREFIX,HADOOP_HOME,JAVA_HOME</code></td>
+    <td><code>HADOOP_PREFIX,HADOOP_HOME,JAVA_HOME,HIVE_HOME</code></td>
     <td>The environment variables passed through to exec.</td>
   </tr>
 
